# epfl-cs-341-proj

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Image.cpp  Image.h  LICENSE  Light.cpp  Light.h  Makefile  Material.cpp  Material.h  README.md  Ray.h  Scene.cpp  Scene.h  StopWatch.cpp  raytracer.cpp  tetra.h  vec3.cpp  vec3.h
docs/: Makefile  index.html  index.md
examples/: 3_marble_spheres.json  3spheres.json  glass_julia.json  glass_julia_video.json  glass_sphere.json  glass_tetra.json  julia.json  julia_2.json  julia_2_video.json  julia_video.json  mandelbulb.json  mandelbulb_video.json  many_spheres.json  marble_mandelbulb.json  marble_sphere.json  sphere.json  sphere_video.json  tetra.json  tetra_video.json
lib/lvandeve/: CMakeLists.txt
src/: CMakeLists.txt  Camera.cpp  Camera.h  DE.cpp  DE.h  Image.cpp  Image.h  Light.cpp  Light.h  Material.cpp  Material.h  Object.h  Objects.cpp  PerlinTexture.cpp  Ray.cpp  Ray.h  Scene.cpp  Scene.h  StopWatch.h  Tetra.cpp  TetraDE.cpp  TexMap.cpp  TexMap.h  Texture.cpp  Texture.h  quat.cpp  quat.h  raytracer.cpp  tetra.h  vec3.cpp  vec3.h
